Adds animated initials logo.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-Hello World
+---
+layout: default
+title: Alex Mueller - Freelance Web Developer
+---
+<div class="logo">
+	<div class="initial-a">
+		<div class="animate stem left-stem"></div>
+		<div class="animate crossbar"></div>
+		<div class="animate stem right-stem"></div>
+	</div>
+	<div class="initial-m">
+		<div class="animate stem left-stem"></div>
+		<div class="animate stem right-stem"></div>
+	</div>
+</div>
