--- a/index.html
+++ b/index.html
@@ -13,3 +13,20 @@ title: Alex Mueller - Freelance Web Developer
 		<div class="animate stem right-stem"></div>
 	</div>
 </div>
+
+<section>
+	<h1>connect</h1>
+	<ul class="links">
+		<li><a href="https://www.linkedin.com/in/alexjmueller" target="_blank" aria-label="LinkedIn"><img src="img/linkedin.svg" alt="LinkedIn"><div class="details">Full r&#233;sum&#233; on LinkedIn</div></a></li>
+		<li><a href="https://twitter.com/ajmueller" target="_blank" aria-label="Twitter"><img src="img/twitter.svg" alt="Twitter"><div class="details">Twitter</div></a></li>
+		<li><a href="https://github.com/ajmueller" target="_blank" aria-label="Github"><img src="img/github.svg" alt="Github"><div class="details">Github open source projects</div></a></li>
+	</ul>
+</section>
+
+<section>
+	<h1>my work</h1>
+	<ul class="links">
+		<li><a href="http://modernme.nu" target="_blank" aria-label="Modern Menu"><img src="img/modern-menu.svg" alt="Modern Menu"><div class="details"><p>Modern Menu</p><p>Co-founder and CTO</p></div></a></li>
+		<li><a href="https://github.com/connectivedx/Phoenix" target="_blank" aria-label="Phoenix Web Development Framework"><img src="img/phoenix.svg" alt="Phoenix"><div class="details"><p>Phoenix framework</p><p>Creator and former lead developer</p></div></a></li>
+	</ul>
+</section>
