--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ title: Alex Mueller - Freelance Web Developer
 	<ul class="links">
 		<li><a href="https://www.linkedin.com/in/alexjmueller" target="_blank" aria-label="LinkedIn"><img src="img/linkedin.svg" alt="LinkedIn"><div class="details"><p class="details-title">LinkedIn</p><p>full r&#233;sum&#233; and experience</p></div></a></li>
 		<li><a href="https://twitter.com/ajmueller" target="_blank" aria-label="Twitter"><img src="img/twitter.svg" alt="Twitter"><div class="details"><p class="details-title">Twitter</p><p>let's chat web dev</p></div></a></li>
-		<li><a href="https://github.com/ajmueller" target="_blank" aria-label="Github"><img src="img/github.svg" alt="Github"><div class="details"><p class="details-title">Github</p><p>open source project contributions</p></div></a></li>
+		<li><a href="https://github.com/ajmueller" target="_blank" aria-label="GitHub"><img src="img/github.svg" alt="GitHub"><div class="details"><p class="details-title">GitHub</p><p>open source project contributions</p></div></a></li>
 	</ul>
 </section>
 
