--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Alex Mueller - Freelance Web Developer
+title: Alex Mueller - Full-Stack Web Developer
 ---
 <div class="logo">
 	<div class="initial-a">
@@ -17,7 +17,7 @@ title: Alex Mueller - Freelance Web Developer
 <section>
 	<h1>my work</h1>
 	<ul class="links">
-		<li><a href="http://ten-four.tech" target="_blank" aria-label="ten-four"><img src="img/ten-four.svg" alt="ten-four"><div class="details"><p class="details-title">ten-four</p><p>founder and president</p></div></a></li>
+		<li><a href="https://sporkbytes.com" target="_blank" aria-label="Spork Bytes"><img src="img/spork-bytes.png" alt="Spork Bytes"><div class="details"><p class="details-title">Spork Bytes</p><p>CTO</p></div></a></li>
 		<li><a href="http://modernme.nu" target="_blank" aria-label="Modern Menu"><img src="img/modern-menu.svg" alt="Modern Menu"><div class="details"><p class="details-title">Modern Menu</p><p>co-founder and director of development</p></div></a></li>
 		<li><a href="https://github.com/connectivedx/Phoenix" target="_blank" aria-label="Phoenix Web Development Framework"><img src="img/phoenix.svg" alt="Phoenix"><div class="details"><p class="details-title">Phoenix framework</p><p>creator and former lead developer</p></div></a></li>
 	</ul>
